--- a/index.html
+++ b/index.html
@@ -109,5 +109,11 @@
         </div>
     </main>
 
+    <footer class ="footer">
+        <div><a target="_blank" href="https://github.com/letohx"><img class="github-icon" src="./assets/icons/github2.png" alt="Github Icon"></a></div>
+        <div><h2>2023</h2></div>
+        <div><a target="_blank" href="https://rs.school/js/"><img class="rss-icon" src="https://rs.school/images/rs_school_js.svg" alt="RS School Icon"></a></div>
+    </footer>
+    
 </body>
 </html>
